fix(post-teaser): corrects visibility

--- a/assets/scss/components/_post-teaser.scss
+++ b/assets/scss/components/_post-teaser.scss
@@ -4,6 +4,7 @@
   .is-foreground {
     display: inline-block;
     overflow: hidden;
+    width: 100%;
   }
 }
 
